--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -400,7 +400,8 @@
 \end{tikzpicture}
 \end{center}
 
-а) Требуется найти вероятность $\P(N=3)$. 
+\begin{enumerate}
+\item Требуется найти вероятность $\P(N=3)$. 
 Исход $N=3$ может произойти двумя способами.
 Следуя по стрелочкам, получим 
 
@@ -408,13 +409,13 @@
 P(N=3) = \frac{1}{2}\cdot\frac{2}{3}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{2}{3}\cdot\frac{1}{2} = \frac{1}{3}
 \]
 
-б) Чтобы найти математическое ожидание, найдём закон распределения $N$. 
+\item Чтобы найти математическое ожидание, найдём закон распределения $N$. 
 Случайная величина дискретна и принимает значения \{2, 3, 4\}\footnote{Другими словами, множество элементарных исходов  — это \{2, 3, 4\}}. 
 Найдём вероятности каждого из исходов
 
 \begin{flalign*}
 & \P(N=2) = \frac{1}{2}\cdot\frac{1}{3}=\frac{1}{6}\\
-& \P(N=4) = 1 - \P(N=2) - \P(N=3) = 1 - \frac{1}{6} – \frac{1}{2} = \frac{1}{3}
+& \P(N=4) = 1 - \P(N=2) - \P(N=3) = 1 - \frac{1}{6} – \frac{1}{3} = \frac{1}{2}
 \end{flalign*}
 
 Мы нашли закон распределения и можем записать его в виде таблицы
@@ -423,15 +424,17 @@ P(N=3) = \frac{1}{2}\cdot\frac{2}{3}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{2}{
     \begin{tabular}{lccc}
     	\toprule
     	$t$ & $2$  & $3$  & $4$ \\
-    	$\P(X = t)$ & $1/6$  & $1/2$  & $1/3$ \\
+    	$\P(X = t)$ & $1/6$  & $1/3$  & $1/2$ \\
       \bottomrule
     \end{tabular}
 \end{center}
 
 Теперь посчитать математическое ожидание не составит труда
 \[
-\E(X) = 2\cdot\frac{1}{6} + 3\cdot\frac{1}{2} + 4\cdot\frac{1}{3} = \frac{19}{6}
+\E(X) = 2\cdot\frac{1}{6} + 3\cdot\frac{1}{3} + 4\cdot\frac{1}{2} = \frac{10}{3}
 \]
+\end{enumerate}
+
 \end{sol}
 \end{problem}
 
@@ -576,14 +579,14 @@ P(N=3) = \frac{1}{2}\cdot\frac{2}{3}\cdot\frac{1}{2} + \frac{1}{2}\cdot\frac{2}{
     \begin{tabular}{lccc}
     	\toprule
     	$t$ & $3$  & $4$  & $5$ \\
-    	$\P(N = t)$ & $1/8$  & $1/2$  & $3/8$ \\
+    	$\P(N = t)$ & $1/4$  & $3/8$  & $3/8$ \\
       \bottomrule
     \end{tabular}
 \end{center}
 
-Тогда математическое ожидание $E(X) = 0\cdot\frac{1}{8} + 1\cdot\frac{3}{8} + 2\cdot\frac{3}{8} = \frac{9}{8}$
+Тогда математическое ожидание $E(X) = 3\cdot\frac{1}{4} + 4\cdot\frac{3}{8} + 5\cdot\frac{3}{8} = \frac{33}{8}$
 
-$\P(N \text{-- чётное}) = \P(N=4) = \frac{3}{8}$
+$\P(N \text{— чётное}) = \P(N=4) = \frac{3}{8}$
 \end{sol}
 \end{problem}
 
@@ -783,7 +786,8 @@ p = \frac{1}{6} + \frac{5}{6}\cdot\frac{5}{6}\cdot p, \quad p = \frac{6}{11}
 \end{tikzpicture}
 \end{center}
 
-а) Пусть $a$ — вероятность выигрыша Маши, если она находится в старте, $b$ — вероятность выигрыша Маши, если она находится в «О» и так далее, как на рисунке ниже
+\begin{enumerate}
+\item Пусть $a$ — вероятность выигрыша Маши, если она находится в старте, $b$ — вероятность выигрыша Маши, если она находится в «О» и так далее, как на рисунке ниже
 
 \begin{center}
 \begin{tikzpicture}
@@ -822,7 +826,7 @@ p = \frac{1}{6} + \frac{5}{6}\cdot\frac{5}{6}\cdot p, \quad p = \frac{6}{11}
 \end{cases}, \quad a=\frac{1}{4}
 \]
 
-б) Все случаи, когда подбрасываний четыре — это «abddm», «abces», «acces».
+\item Все случаи, когда подбрасываний четыре — это «abddm», «abces», «acces».
 Значит $\P(X=4)=3\cdot1/2^4=3/16$.
 
 Все случаи, когда решка одна — это «abces», «acces» и все случаи вида «abd\ldots dm». 
@@ -833,11 +837,11 @@ $\P(Y=1) = 1/4 + 1/8 + 1/16 = 7/16$
 
 \[
 \begin{cases}
-    a=\frac{1}{2}\cdot b + \frac{1}{2}\cdot c\\
-    b = \frac{1}{2}\cdot d + \frac{1}{2}\cdot c\\
-    c = \frac{1}{2}\cdot (c+1) + \frac{1}{2}\cdot e\\
-    d = \frac{1}{2}\cdot d + \frac{1}{2}\cdot 1\\
-    e = \frac{1}{2}\cdot c + \frac{1}{2}\cdot 1
+    a=1 + \frac{1}{2}\cdot b + \frac{1}{2}\cdot c\\
+    b =1 + \frac{1}{2}\cdot d + \frac{1}{2}\cdot c\\
+    c =1 + \frac{1}{2}\cdot c + \frac{1}{2}\cdot e\\
+    d = \frac{1}{2}\cdot (d + 1) + \frac{1}{2}\cdot 1\\
+    e = \frac{1}{2}\cdot (c + 1) + \frac{1}{2}\cdot 1
 \end{cases}
 \]
 
@@ -859,7 +863,7 @@ $\P(Y=1) = 1/4 + 1/8 + 1/16 = 7/16$
 
 Здесь тоже найдётся единственное решение.
 
-в) Нарисуем дерево
+\item Нарисуем дерево
 
 \begin{center}
 \begin{tikzpicture}
@@ -889,6 +893,7 @@ $\P(Y=1) = 1/4 + 1/8 + 1/16 = 7/16$
 \end{center}
 
 Остальные пункты аналогичные.
+\end{enumerate}
 
 \end{sol}
 \end{problem}
