--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1281,7 +1281,7 @@ q_3=(1-q_2)p_2 + q_2(1-p_2) = \frac{1}{2}p^2 + \frac{1}{2}(1-p_2) = \frac{1}{2},
 
 \begin{sol}
 
-Нарисуем дерево, вероятности перехода из стадии в стадию опустим, они равны $1/3$
+Вероятности перехода из вершины в вершину опустим, они равны по $1/3$.
 
 \begin{center}
 \begin{tikzpicture}
@@ -1295,14 +1295,14 @@ q_3=(1-q_2)p_2 + q_2(1-p_2) = \frac{1}{2}p^2 + \frac{1}{2}(1-p_2) = \frac{1}{2},
 \tikzset{EdgeStyle/.style={->}}
 \Edge(s)(d)
 \Loop[dist=3cm, style={very thick}, label={$t + 2$}, labelstyle={fill=white}, dir=EA,style={->}](s)
-\Loop[dist=3cm, style={very thick}, label={$t + 1$}, labelstyle={fill=white}, dir=WE,style={->}](s)
+\Loop[dist=3cm, style={very thick}, label={$t + 3$}, labelstyle={fill=white}, dir=WE,style={->}](s)
 \end{tikzpicture}
 \end{center}
 
 Пусть $\mu$ — ожидание времени нахождения сыра, тогда имеет место уравнение
 
 \[
-\mu = \frac{1}{3}\cdot1 + \frac{1}{3}\cdot(\mu + 1) + \frac{1}{3}\cdot(\mu + 2), \quad\mu = 4 
+\mu = \frac{1}{3}\cdot1 + \frac{1}{3}\cdot(\mu + 2) + \frac{1}{3}\cdot(\mu + 3), \quad \mu = 6
 \]
 
 \end{sol}
