--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3594,32 +3594,44 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 
 % lln
 \begin{problem}
- Величины $X_1$, \ldots, $X_n$ независимы и равномерно распределены на отрезке $[0;1]$. Найдите $\plim \bar X_n$, $\plim 1/(1 +\bar X_n)$, $\plim \sum_{i=1}^n \ln X_i / n$, $\plim \sqrt[n]{X_1 \cdot \ldots \cdot  X_n}$, $\plim (X_1 \cdot \ldots \cdot X_n)$, $\plim \max\{X_1, \ldots, X_n \}$, $\plim \min \{X_1, \ldots, X_n\}$, $\plim \frac{\sum (X_i - \bar{X})^2}{n}$, $\plim X_1 / \bar{X}$.
+ Величины $X_1$, \ldots, $X_n$ независимы и равномерно распределены на отрезке $[0;1]$. 
+ Найдите $\plim \bar X_n$, $\plim 1/(1 +\bar X_n)$, $\plim \sum_{i=1}^n \ln X_i / n$, $\plim \sqrt[n]{X_1 \cdot \ldots \cdot  X_n}$, $\plim (X_1 \cdot \ldots \cdot X_n)$, $\plim \max\{X_1, \ldots, X_n \}$, $\plim \min \{X_1, \ldots, X_n\}$, $\plim \frac{\sum (X_i - \bar{X})^2}{n}$, $\plim X_1 / \bar{X}$.
 
 % clt
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
- Величины $X_1$, \ldots, $X_n$ независимы и равномерно распределены на отрезке $[0;1]$. Найдите примерный закон распределения величин $\bar X_{100}$, $S_{100} = X_1 + \ldots + X_{100}$. Найдите примерно $\P(\bar X_{100} > 0.55)$, $\P(S_n \in [50; 60])$, $\E(\bar X_{100} | \bar X_{100} > 0.6)$. Найдите такое число $a$, для которого $\P(S_n < a)=0.65$.
+ Величины $X_1$, \ldots, $X_n$ независимы и равномерно распределены на отрезке $[0;1]$. 
+ \begin{enumerate}
+  \item Найдите примерный закон распределения величин $\bar X_{100}$, $S_{100} = X_1 + \ldots + X_{100}$.
+  \item Найдите примерно $\P(\bar X_{100} > 0.55)$, $\P(S_n \in [50; 60])$, $\E(\bar X_{100} | \bar X_{100} > 0.6)$.
+  \item Найдите такое число $a$, для которого $\P(S_n < a)=0.65$.
+ \end{enumerate}
 
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Количество смс за сутки, посылаемое каждым из 160 абонентов, имеет пуассоновское распределение со средним значением 5 смс в сутки. Какова вероятность того, что за двое суток абоненты пошлют в сумме более 1700 сообщений?
 
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
- Каждый день цена акции равновероятно поднимается или опускается на один рубль. Сейчас акция стоит 1000 рублей. Найдите вероятность того, что через сто дней акция будет стоить больше 1030 рублей.
-
-
+ Каждый день цена акции равновероятно поднимается или опускается на один рубль. 
+ Сейчас акция стоит 1000 рублей. 
+ 
+ Найдите вероятность того, что через сто дней акция будет стоить больше 1030 рублей.
 \begin{sol}
   $S_{100} \sim \cN(1000, 100)$, $\P(S_{100}>1030)=\P(Z>3)=0.0013$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Вероятность выпадения монетки «орлом» равна 0.63.
 \begin{enumerate}
@@ -3636,17 +3648,20 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 
 
 \begin{problem}
- (*) Случайные величины $X$ и $Y$ независимы и равновероятно принимают значения от $1$ до $n$. Вероятность того, что сумма $X+Y$ является квадратом натурального числа, обозначим $p_n$. Найдите предел $\lim_{n\to\infty} \sqrt{n} p_n$.
-
-
+ (*) Случайные величины $X$ и $Y$ независимы и равновероятно принимают значения от $1$ до $n$. 
+ Вероятность того, что сумма $X+Y$ является квадратом натурального числа, обозначим $p_n$. 
+ 
+ Найдите предел $\lim_{n\to\infty} \sqrt{n} p_n$.
 \begin{sol}
   $4(\sqrt{2}-1)/3$, 20 problems
 \end{sol}
 \end{problem}
+
 \begin{problem}
- (*) Величины $X_1$, \ldots, $X_n$ независимы и равномерны на отрезке $[0;1]$. Вероятность того, что сумма любых двух соседних иксов меньше единицы, обозначим $p_n$. Найдите предел $\lim_{n\to\infty}  p_n^{1/n}$.
-
-
+ (*) Величины $X_1$, \ldots, $X_n$ независимы и равномерны на отрезке $[0;1]$. 
+ Вероятность того, что сумма любых двух соседних иксов меньше единицы, обозначим $p_n$. 
+ 
+ Найдите предел $\lim_{n\to\infty}  p_n^{1/n}$.
 \begin{sol}
   $2/\pi$, 20 problems
 \end{sol}
@@ -3676,15 +3691,41 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 
 
 \begin{problem}
-Величины $X$ и $Y$ имеют \textit{небольшую} дисперсию. 
+Величины $X$ и $Y$ независимы и нормально распределены $\cN(5, 0.001)$ и $\cN(10, 0.002)$.
 
-Найдите примерно ожидания и дисперсии для $R = X/Y$ и $Z = X\cdot Y$.
+Найдите примерно ожидания и дисперсии для величин $R = X/Y$ и $Z = X\cdot Y$.
 \begin{sol}
 \end{sol}
 \end{problem}
   
+\begin{problem}
+  Кот Леопольд строит параболу $f(x) = R_2 x^2 + R_1 x + R_0$ со случайными коэффициентами $R_2$, $R_1$ и $R_0$.
+Коэффициенты имеют совместное нормальное распределение 
+\[
+\begin{pmatrix}
+  R_0 \\
+  R_1 \\
+  R_2 \\
+\end{pmatrix}  \sim \cN \left(
+\begin{pmatrix}
+  1 \\
+  2 \\
+  3 \\ 
+\end{pmatrix} ; 
+\begin{pmatrix}
+  0.001 &    0      &     0 \\
+  0     &    0.002 &  -0.001 \\
+  0    & - 0.001 & 0.003 \\
+\end{pmatrix}
+\right).
+\]
 
-
+Найдите примерно закон распределение абсциссы и ординаты вершины\footnote{Это простейшая модель, подходящая, например, для поиска оптимальной дозировки лекарства.}. 
+\begin{sol}
+\end{sol}
+\end{problem}
+  
+% Здесь надо добавить задачу про логит модель и предельные эффекты!
 
 \section{Условное математическое ожидание}
 
@@ -3795,11 +3836,14 @@ $f_{X}(x)=
 \end{problem}
 
 \begin{problem}
- Неправильный кубик\index{кубик} выпадает с вероятностью $0{,}5$ шестеркой вверх. Остальные пять граней выпадают равновероятно. Случайная величина $X$ — остаток от деления номера грани на два, $Y$ — остаток от деления номера грани на три. Найдите
+ Неправильный кубик\index{кубик} выпадает с вероятностью $0.5$ шестеркой вверх. 
+ Остальные пять граней выпадают равновероятно. 
+ Случайная величина $X$ — остаток от деления номера грани на два, 
+ $Y$ — остаток от деления номера грани на три. 
 \begin{enumerate}
-\item Закон распределения $\E(X\mid Y)$, $\E(Y\mid X)$
-\item Выразите $\E(Y\mid X)$ через $X$, а $\E(X\mid Y)$ через $Y$
-\item Найдите $Cov(\E(Y\mid X),\E(X\mid Y))$, $Cov(\E(Y\mid X),X)$, $Cov(Y,X)$
+\item Найдите закон распределения $\E(X\mid Y)$, $\E(Y\mid X)$.
+\item Выразите $\E(Y\mid X)$ через $X$, а $\E(X\mid Y)$ через $Y$.
+\item Найдите $\Cov(\E(Y\mid X),\E(X\mid Y))$, $\Cov(\E(Y\mid X),X)$, $\Cov(Y,X)$.
 \end{enumerate}
 
 \begin{sol}
