delo o dvuh c zakryto

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1067,7 +1067,7 @@ $\P(\text{они будут разного цвета})$?
 По теореме Моргана 
 
 \[
-\P(A^с \cap B^с) = \P((A\cup B)^c) = 1-\P(A\cup B) = 1-\P(A)-\P(B) = 1-0.7=0.3
+\P(A^c \cap B^c) = \P((A\cup B)^c) = 1-\P(A\cup B) = 1-\P(A)-\P(B) = 1-0.7=0.3
 \]
 
 \end{sol}
