--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2266,7 +2266,22 @@ X, \text{ если } X\geq a.\\
 \end{problem}
 
 
+\begin{problem}
+Величина $U$ распределена равномерно на отрезке $[0;1]$. 
+Рассмотрим две тройки случайных величин, тройку $X = \tan(\pi U/2)$, $Y= \tan(\pi U/2)$ и $Z = - 2\tan(\pi U/2)$, и тройку $X'=\tan(\pi U/2)$, $Y' = \tan(\pi (1-U)/2)$ и $Z'=-2\tan(\pi \abs{2U-1}/2)$.
 
+\begin{enumerate}
+  \item Найдите $\E(X + Y + Z)$.
+  \item Правда ли что одинаково распределены $X$ и $X'$, $Y$ и $Y'$, $Z$ и $Z'$?
+  \item Найдите $\E(X' + Y' + Z')$.
+  \item Из-за чего возможен такой парадокс?
+\end{enumerate}
+
+
+\begin{sol}
+  $\E(X+Y+Z) = 0$, $\E(X'+Y'+Z') = \frac{4}{\pi}\ln 2$, $X\sim X'$, $Y\sim Y'$, $Z\sim Z'$, парадок возникает из-за бесконечности ожиданий $X$, $Y$ и $Z$.
+\end{sol}
+\end{problem}
 
 
 
@@ -2421,17 +2436,18 @@ $1.75$
 \begin{problem}
 
 Вовочка\index{герои!Вовочка} получает пятерку с вероятностью 0.1, четверку — с вероятностью 0.2, тройку — с вероятностью — 0.3 и двойку с вероятностью 0.4. 
-В этом четверти он писал 20 контрольных. Какова вероятность того, что все оценки у Вовочки одинаковые? Сколько разных оценок он в среднем получит?
+В этом четверти он писал 20 контрольных. Какова вероятность того, что все оценки у Вовочки одинаковые? 
+Сколько разных оценок он в среднем получит?
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
  «Судьба Дон Жуана\index{герои!Дон Жуан}»
-У Васи  $n$  знакомых девушек (их всех зовут по-разному). Он пишет
-им  $n$  писем, но, по рассеянности, раскладывает их в конверты
-наугад. Величина  $X$  обозначает количество девушек, получивших
-письма, написанные лично для них. Найдите  $\E(X)$, $\Var(X)$.
+У Васи  $n$  знакомых девушек (их всех зовут по-разному). 
+Он пишет им  $n$  писем, но, по рассеянности, раскладывает их в конверты наугад. 
+Величина  $X$  обозначает количество девушек, получивших письма, написанные лично для них. 
+Найдите  $\E(X)$, $\Var(X)$.
 \begin{sol}
 $\E(X)=1$, $\Var(X)=1$
 \end{sol}
@@ -2439,15 +2455,19 @@ $\E(X)=1$, $\Var(X)=1$
 
 \begin{problem}
  Над озером взлетело 20 уток. Каждый из 10 охотников один раз
-стреляет в случайно выбираемую им утку. Величина $Y$ — количество убитых уток, $X$ — количество попавших в цель охотников. Найдите $\E(X)$, $\Var(X)$, $\E(Y)$, $\Var(Y)$, если охотники стреляют без промаха. Как изменится
-ответ, если вероятность попадания равна $0.7$?
+стреляет в случайно выбираемую им утку. Величина $Y$ — количество убитых уток, $X$ — количество попавших в цель охотников. 
+Найдите $\E(X)$, $\Var(X)$, $\E(Y)$, $\Var(Y)$, если охотники стреляют без промаха. 
+Как изменится ответ, если вероятность попадания равна $0.7$?
 \begin{sol}
 $\E(Y)=20-20 \left( \frac{19}{20} \right)^{10}\approx 8.025$
 \end{sol}
 \end{problem}
 
 \begin{problem}
- Вокруг новогодней ёлки танцуют хороводом 27 детей. Мы считаем, что ребенок высокий, если он выше обоих своих соседей. Величина $X$ — количество высоких детей в хороводе. Найдите $\E(X)$, $\Var(X)$. Вероятность совпадения роста будем считать равной нулю.
+ Вокруг новогодней ёлки танцуют хороводом 27 детей. 
+ Мы считаем, что ребенок высокий, если он выше обоих своих соседей. 
+ Величина $X$ — количество высоких детей в хороводе. Найдите $\E(X)$, $\Var(X)$. 
+ Вероятность совпадения роста будем считать равной нулю.
 \begin{sol}
 $\E(X)=9$, $\Var(X)=1.2$
 \end{sol}
@@ -2465,7 +2485,9 @@ $\E(X)=9$, $\Var(X)=1.2$
  Внутри каждой упаковки шоколадки находится наклейка
 с изображением одного из 30 животных. Предположим, что все
 наклейки равновероятны, величина $X$ — это количество шоколадок, которые
-купить, чтобы собрать полную коллекцию наклеек. Чему равны $\E(X)$, $\Var(X)$? Как это объяснить ребёнку?
+купить, чтобы собрать полную коллекцию наклеек. Чему равны $\E(X)$, $\Var(X)$? 
+
+Как это объяснить ребёнку?
 \begin{sol}
   $\E(X)=\frac{30}{30} + \frac{30}{29} + \ldots + \frac{30}{1}\approx 119.85$
 
@@ -2481,19 +2503,23 @@ $\E(X)=9$, $\Var(X)=1.2$
 \end{problem}
 
 \begin{problem}
- За круглым столом сидят в случайном порядке $n$ супружеских пар, всего — $2n$ человек. Величина $X$ — число пар, где супруги оказались напротив друг друга. Найдите $\E(X)$ и $\Var(X)$
+ За круглым столом сидят в случайном порядке $n$ супружеских пар, всего — $2n$ человек. 
+ Величина $X$ — число пар, где супруги оказались напротив друг друга. Найдите $\E(X)$ и $\Var(X)$.
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
- В задачнике $N$ задач. Из них $a$ — Вася умеет решать, а остальные не умеет. На экзамене предлагается равновероятно выбираемые $n$ задач. Величина $X$ — число решенных Васей задач на экзамене. Найдите $\E(X)$ и $\Var(X)$
+ В задачнике $N$ задач. Из них $a$ — Вася умеет решать, а остальные не умеет. 
+ На экзамене предлагается равновероятно выбираемые $n$ задач. 
+ Величина $X$ — число решенных Васей задач на экзамене. Найдите $\E(X)$ и $\Var(X)$.
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
- Кубик подбрасывается $n$ раз. Величина $X_{1}$ — число выпадений 1, а $X_{6}$ — число выпадений 6. Найдите $\Corr(X_{1},X_{6})$
+ Кубик подбрасывается $n$ раз. Величина $X_{1}$ — число выпадений 1, а $X_{6}$ — число выпадений 6. 
+ Найдите $\Corr(X_{1},X_{6})$.
 \begin{sol}
 \end{sol}
 \end{problem}
