--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2268,18 +2268,19 @@ X, \text{ если } X\geq a.\\
 
 \begin{problem}
 Величина $U$ распределена равномерно на отрезке $[0;1]$. 
-Рассмотрим две тройки случайных величин, тройку $X = \tan(\pi U/2)$, $Y= \tan(\pi U/2)$ и $Z = - 2\tan(\pi U/2)$, и тройку $X'=\tan(\pi U/2)$, $Y' = \tan(\pi (1-U)/2)$ и $Z'=-2\tan(\pi \abs{2U-1}/2)$.
+Рассмотрим две тройки случайных величин, тройку $X_1 = \tan(\pi U/2)$, $Y_1= \tan(\pi U/2)$, $Z_1 = - 2\tan(\pi U/2)$, и тройку $X_2=\tan(\pi U/2)$, $Y_2 = \tan(\pi (1-U)/2)$, $Z_2=-2\tan(\pi \abs{2U-1}/2)$.
 
 \begin{enumerate}
-  \item Найдите $\E(X + Y + Z)$.
-  \item Правда ли что одинаково распределены $X$ и $X'$, $Y$ и $Y'$, $Z$ и $Z'$?
-  \item Найдите $\E(X' + Y' + Z')$.
+  \item Найдите $\E(X_1 + Y_1 + Z_1)$.
+  \item Правда ли что одинаково распределены $X_1$ и $X_2$, $Y_1$ и $Y_2$, $Z_1$ и $Z_2$?
+  \item Найдите $\E(X_2 + Y_2 + Z_2)$.
   \item Из-за чего возможен такой парадокс?
 \end{enumerate}
 
 
 \begin{sol}
-  $\E(X+Y+Z) = 0$, $\E(X'+Y'+Z') = \frac{4}{\pi}\ln 2$, $X\sim X'$, $Y\sim Y'$, $Z\sim Z'$, парадок возникает из-за бесконечности ожиданий $X$, $Y$ и $Z$.
+  $\E(X_1 + Y_1 + Z_1) = 0$, $\E(X_2 + Y_2 + Z_2) = \frac{4}{\pi}\ln 2$, $X_1 \sim X_2$, $Y_1 \sim Y_2$, $Z_1 \sim Z_2$, 
+  парадокс возникает из-за бесконечности ожиданий $X$, $Y$ и $Z$.
 \end{sol}
 \end{problem}
 
