--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -271,13 +271,17 @@
 
 \newpage
 
-\section{Вперёд, в рукопашную!}
+Это задачки к семинарам исследовательского потока факультета экономики вшэ. 
+При везении подсказку, ответ или решение можно найти, кликнув по номеру задачи. 
+Свежая версия доступна по ссылке \url{https://github.com/bdemeshev/probability_pro}.
+Красивые и сложные олимпиадные задачи по вероятностям можно найти на \url{https://github.com/bdemeshev/probability_dna},
+а подборку прошлых экзаменов — на \url{https://github.com/bdemeshev/probability_hse_exams}.
 
+\section{Вперёд, в рукопашную!}
 
 Минитеория:
 
 \begin{enumerate}
-\item \url{https://github.com/bdemeshev/probability_pro}
 \item Константы. Cтрочные английские буквы, $a$, $x$, $z$.
 \item События. Заглавные английский буквы начала алфавита $A$, $B$, $C$, $D$. Вероятность $\P(A)$.
 \item Случайные величины. Заглавные английский буквы конца алфавита $X$, $Y$, $W$, $Z$. Математическое ожидание $\E(X)$.
@@ -3645,12 +3649,14 @@ $X\sim \cN(\mu;\sigma^{2})$, $Y\sim U[0;20]$ и $Z\sim Exp(1)$.
 
 \begin{problem}
   Весна, половодье. На пеньках ждут спасения зайцы. 
-  Их очень много. Количество зайев на каждом пеньке — случайная величина равновероятно принимающая значения от 1 до 19. 
+  Их очень много. 
   У Деда Мазая две стратегии. 
   
-  Стратегия А: перевозить зайецев на безопасное место равными партиями по 10 штук. 
+  Стратегия А: перевозить зайцев на своей старой лодке, вмещающей 10 зайцев. 
   
-  Стратегия Б: спасать за одну перевозку зайцев с одного пенька. 
+  Стратегия Б: написать в Whatsapp Золотой рыбке и попросить новую лодку. 
+  Золотая рыбка забирает старую лодку деда Мазая и взамен выдаёт новую,
+  равновероятно вмещающую от 1 до 19 зайцев.  
   
   При какой стратегии у Деда Мазая в среднем будет меньше перевозок?
 \begin{sol}
